# BabelDOC

./: pyproject.toml
.github/workflows/: publish-to-pypi.yml
babeldoc/: __init__.py
