[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "babeldoc"
version = "0.1.0"
description = "A document translation tool — Fork of funstory-ai/BabelDOC"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "BabelDOC Contributors" },
]
keywords = ["pdf", "translation", "document", "nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pdfminer.six>=20221105",
    "pymupdf>=1.23.0",
    "httpx>=0.27.0",
    "tenacity>=8.2.0",
    "tqdm>=4.66.0",
    "rich>=13.7.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
babeldoc = "babeldoc.cli:main"

[project.urls]
Homepage = "https://github.com/funstory-ai/BabelDOC"
Repository = "https://github.com/funstory-ai/BabelDOC"
Issues = "https://github.com/funstory-ai/BabelDOC/issues"
Changelog = "https://github.com/funstory-ai/BabelDOC/releases"

[tool.hatch.build.targets.wheel]
packages = ["babeldoc"]

[tool.ruff]
line-length = 88  # personal preference: align with black's default
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["babeldoc"]

[tool.mypy]
python_version = "3.10"
# Relaxing strict mode for personal use — too many upstream stubs are missing
strict = false
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=babeldoc --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
source = ["babeldoc"]
omit = ["tests/*"]
